--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -5,8 +5,8 @@ on:
     paths:
       - ".github/workflows/kernel.yml"
   workflow_dispatch:
-  schedule:
-    - cron: "14 13 * * 5"
+#  schedule:
+#    - cron: "14 13 * * 5"
 
 jobs:
   Read-configuration:
