--- a/Kernel/configs/sl8541e.config.json
+++ b/Kernel/configs/sl8541e.config.json
@@ -1,7 +1,7 @@
 [
   {
     "kernelSource": {
-      "name": "KernelSPRD_armv7l_byVados,
+      "name": "KernelSPRD_armv7l_byVados",
       "repo": "https://github.com/vados-dev/android_kernel_sprd_lucyzh",
       "branch": "main",
       "device": "sl8541e",
