--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -20,7 +20,8 @@ on:
 jobs:
   Read-configuration:
     name: 🐂 Parse *.config.json
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.0.4
+    if: github.event.repository.owner.id == github.event.sender.id
     outputs:
       CONFIGS: ${{ steps.generate-matrix.outputs.CONFIGS }}
       BUILD_DATE: ${{ steps.generate-builddate.outputs.BUILDDATE }}
