--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -44,7 +44,7 @@ jobs:
 
   Build-Kernel:
     name: "🐎 Build kernel"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.0.4
     needs:
       - Read-configuration
     strategy:
