--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   Read-configuration:
     name: 🐂 Parse *.config.json
-    runs-on: ubuntu-22.0.4
+    runs-on: ubuntu-latest
     outputs:
       CONFIGS: ${{ steps.generate-matrix.outputs.CONFIGS }}
       BUILD_DATE: ${{ steps.generate-builddate.outputs.BUILDDATE }}
@@ -42,7 +42,7 @@ jobs:
 
   Build-Kernel:
     name: "🐎 Build kernel"
-    runs-on: ubuntu-22.0.4
+    runs-on: ubuntu-latest
     needs:
       - Read-configuration
     strategy:
