--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -104,14 +104,14 @@ jobs:
       - name: ⭐ Install prerequisites
         run: |
           sudo apt-get update
-          sudo apt-get install --no-install-recommends -y binutils git make automake bc bison openssl kmod cpio flex libelf-dev libssl-dev
+          sudo apt-get install --no-install-recommends -y binutils automake openssl libssl-dev cpio libelf-dev python-is-python3 python-dev-is-python3
           sudo apt-get install --no-install-recommends -y libtfm-dev libc6-dev libc6-dev-i386 device-tree-compiler ca-certificates python3 libc6-dev
           sudo apt-get install --no-install-recommends -y aria2 build-essential pigz libssl-dev curl ftp lftp wget libx11-dev xsltproc libgl1-mesa-dev
-          sudo apt-get install --no-install-recommends -y zip unzip tar gzip bzip2 rar unrar xz-utils bzip2 rar unrar lzop tree libarchive-tools
-          sudo apt-get install --no-install-recommends -y zlib1g-dev libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools
-          sudo apt-get install --no-install-recommends -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl
-          sudo apt-get install --no-install-recommends -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi ccache llvm g++-multilib libfl-dev gperf
-          sudo apt-get install --no-install-recommends -y pngcrush schedtool dpkg-dev liblz4-tool optipng maven lib32ncurses5-dev lib32z-dev
+          sudo apt-get install --no-install-recommends -y zip unzip tar gzip bzip2 rar unrar xz-utils bzip2 rar unrar lzop tree libarchive-tools git
+          sudo apt-get install --no-install-recommends -y zlib1g-dev libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools gperf bc bison
+          sudo apt-get install --no-install-recommends -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl kmod
+          sudo apt-get install --no-install-recommends -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi ccache llvm gcc-multilib g++-multilib libfl-dev 
+          sudo apt-get install --no-install-recommends -y pngcrush schedtool dpkg-dev liblz4-tool optipng maven lib32ncurses5-dev lib32z-dev flex make
 
       # Initialize ccache
       - name: 🚄 Setup ccache
