--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -106,12 +106,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install --no-install-recommends -y binutils make automake cpio libelf-dev python3 python-is-python3 python-dev-is-python3
           sudo apt-get install --no-install-recommends -y libtfm-dev libc6-dev libc6-dev-i386 device-tree-compiler ca-certificates libc6-dev
-          sudo apt-get install --no-install-recommends -y aria2 build-essential pigz libssl-dev curl ftp lftp wget libx11-dev xsltproc libgl1-mesa-dev
+          sudo apt-get install --no-install-recommends -y aria2 build-essential pigz libssl-dev curl ftp lftp wget libx11-dev xsltproc
           sudo apt-get install --no-install-recommends -y zip unzip tar gzip bzip2 rar unrar xz-utils bzip2 rar unrar lzop tree libarchive-tools git
           sudo apt-get install --no-install-recommends -y zlib1g-dev libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools gperf bc
           sudo apt-get install --no-install-recommends -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl kmod
           sudo apt-get install --no-install-recommends -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi ccache llvm libfl-dev openssl libssl-dev bison
-          sudo apt-get install --no-install-recommends -y pngcrush schedtool dpkg-dev liblz4-tool optipng maven lib32ncurses5-dev lib32z-dev flex
+          sudo apt-get install --no-install-recommends -y pngcrush schedtool dpkg-dev liblz4-tool optipng maven lib32z-dev flex libgl1-mesa-dev
 
       # Initialize ccache
       - name: 🚄 Setup ccache
