--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -106,7 +106,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install --no-install-recommends -y binutils make automake cpio libelf-dev python3 python-is-python3 python-dev-is-python3
           sudo apt-get install --no-install-recommends -y libtfm-dev libc6-dev libc6-dev-i386 device-tree-compiler ca-certificates libc6-dev
-          sudo apt-get install --no-install-recommends -y aria2 build-essential pigz libssl-dev curl ftp lftp wget libx11-dev xsltproc
+          sudo apt-get install --no-install-recommends -y aria2 build-essential pigz libssl-dev curl ftp lftp wget libx11-dev xsltproc lib64
           sudo apt-get install --no-install-recommends -y zip unzip tar gzip bzip2 rar unrar xz-utils bzip2 rar unrar lzop tree libarchive-tools git
           sudo apt-get install --no-install-recommends -y zlib1g-dev libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools gperf bc
           sudo apt-get install --no-install-recommends -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl kmod
