--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -1,5 +1,5 @@
 name: Build kernels
-    export DOCKER_DEFAULT_PLATFORM=linux/amd64
+
 on:
   push:
     paths:
@@ -55,6 +55,7 @@ jobs:
         CONFIG: ${{ fromJSON(needs.Read-configuration.outputs.CONFIGS) }}
     if: github.event.repository.owner.id == github.event.sender.id
     env:
+      DOCKER_DEFAULT_PLATFORM: linux/amd64
       # Basic configuration
       WORKSPACE: ${{ github.workspace }}
       BUILD_DATE: "${{ needs.Read-configuration.outputs.BUILD_DATE }}"
@@ -91,7 +92,7 @@ jobs:
 
     steps:
       # Set swap space
-      - name: 📐 Set swap to 10G
+      - name: 📐 Set swap to 11G
         uses: pierotofy/set-swap-space@master
         with:
           swap-size-gb: 11
@@ -105,7 +106,7 @@ jobs:
         run: |
           sudo add-apt-repository -y ppa:deadsnakes/ppa
           sudo apt-get update
-          sudo apt-get install --no-install-recommends -y binutils make automake cpio libelf-dev python3 python-is-python3 python-dev-is-python3
+          sudo apt-get install --no-install-recommends -y binutils make automake cpio libelf-dev python3 python2 python-dev
           sudo apt-get install --no-install-recommends -y libtfm-dev libc6-dev libc6-dev-i386 device-tree-compiler ca-certificates python2 python2-dev
           sudo apt-get install --no-install-recommends -y aria2 build-essential pigz libssl-dev curl ftp lftp wget libx11-dev xsltproc
           sudo apt-get install --no-install-recommends -y zip unzip tar gzip bzip2 rar unrar xz-utils bzip2 rar unrar lzop tree libarchive-tools git
