--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   Read-configuration:
-    name: 🐂 Parse *.config.json
+    name: 🐂 Parse configs
     runs-on: ubuntu-22.04
     outputs:
       CONFIGS: ${{ steps.generate-matrix.outputs.CONFIGS }}
