--- a/Kernel/configs/sl8541e.config.json
+++ b/Kernel/configs/sl8541e.config.json
@@ -16,7 +16,7 @@
         "binaryEnv": ["./bin"]
       }
     ],
-    "enableCcache": true,
+    "enableCcache": false,
     "params": {
       "CC": "clang",
       "externalCommands": {
